# phipo-patterns

./: LICENSE.txt  README.md  pattern_mapping_table_example.csv  pyproject.toml
src/phipo_patterns/: __about__.py  __init__.py  __main__.py  cli.py  patterns.py  robot.py  synchronize.py
src/phipo_patterns/queries/: phipo_metadata_table.sparql
tests/: test_synchronize.py
