[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phipo-patterns"
dynamic = ["version"]
description = 'Scripts to make phenotype design patterns for the Pathogen-Host Interaction Phenotype Ontology (PHIPO)'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "James Seager", email = "james.seager@rothamsted.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyyaml==6.0.1",
  "pandas==2.2.2"
]

[project.urls]
Documentation = "https://github.com/PHI-base/phipo-patterns#readme"
Issues = "https://github.com/PHI-base/phipo-patterns/issues"
Source = "https://github.com/PHI-base/phipo-patterns"

[tool.hatch.version]
path = "src/phipo_patterns/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/phipo_patterns tests}"

[tool.coverage.run]
source_pkgs = ["phipo_patterns", "tests"]
branch = true
parallel = true
omit = [
  "src/phipo_patterns/__about__.py",
]

[tool.coverage.paths]
phipo_patterns = ["src/phipo_patterns", "*/phipo-patterns/src/phipo_patterns"]
tests = ["tests", "*/phipo-patterns/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
